# C_ntnu_h16

Oving1/: CMakeLists.txt  Oving1A.cpp  main.cpp
Oving1/1A/: CMakeLists.txt  Oving1A.cpp
Oving1/1B/: CMakeLists.txt  Oving1B.cpp  temperaturer.txt
Oving2/oppg1/: main.cpp
Oving2/oppg2/: oppgave2.txt
Oving2/oppg3/: oppgave3.txt
Oving2/oppg4/: main.cpp
Oving2/oppg5/: main.cpp
Oving2/oppg6/: main.cpp
Oving3/oppg_1_2/: CMakeLists.txt  main.cpp
Oving3/oppg_3/: CMakeLists.txt  Vare.cpp  Vare.h  VareTest.cpp
Oving3/oppg_4/: CMakeLists.txt  main.cpp
Oving4/oppg1/: main.cpp
Oving4/oppg2/: CMakeLists.txt  main.cpp
Oving5/: main.cpp
Oving6/oppg1/: CMakeLists.txt  chess.cpp
Oving6/oppg2/: CMakeLists.txt  echo_server.cpp
Oving7/oppg1/: CMakeLists.txt  broek.cpp  broek.h  broek_t.cpp
Oving7/oppg2/: CMakeLists.txt  mengde-t.cpp  mengde.cpp  mengde.h
Oving8/oppg1/: main.cpp
Oving8/oppg2/: main.cpp
